--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -73,6 +73,7 @@
   "server": {
     "apiBaseUrl": "http:\/\/localhost:8081",
     "uiBaseUrl": "http:\/\/localhost:4200",
+    "assetsHostUrl": "https:\/\/api-dot-all-of-us-workbench-test.appspot.com",
     "publicApiKeyForErrorReports": "",
     "projectId": "all-of-us-workbench-test",
     "shortName": "Local",
