--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -72,8 +72,8 @@
   },
   "server": {
     "apiBaseUrl": "https:\/\/api.preprod-workbench.researchallofus.org",
+    "apiAssetsBaseUrl": "https:\/\/api.preprod-workbench.researchallofus.org",
     "uiBaseUrl": "https:\/\/preprod-workbench.researchallofus.org",
-    "assetsHostUrl": "https:\/\/api.preprod-workbench.researchallofus.org",
     "publicApiKeyForErrorReports": "AIzaSyA5Q0xqZdyaHUIUjZFqpim26wQFO0JqIRw",
     "projectId": "all-of-us-rw-preprod",
     "shortName": "preprod",
