--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -72,8 +72,8 @@
   },
   "server": {
     "apiBaseUrl": "https:\/\/api.staging.fake-research-aou.org",
+    "apiAssetsBaseUrl": "https:\/\/api.staging.fake-research-aou.org",
     "uiBaseUrl": "https:\/\/staging.fake-research-aou.org",
-    "assetsHostUrl": "https:\/\/api.staging.fake-research-aou.org",
     "publicApiKeyForErrorReports": "AIzaSyAkMIMIzUwv02RBK-A7cE1PbPpDJ2MTNtk",
     "projectId": "all-of-us-rw-staging",
     "shortName": "Staging",
