[RW-9675] [risk=low] Fix API hostname in local config (#7499)
* apply cloud armor check

* spotless

* spotless

* update javadoc

* update javadoc

* fix local server

* fix local server

* use differnt url

* use differnt url

* use differnt url

* comments

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -71,7 +71,8 @@
     "gSuiteDomain": "fake-research-aou.org"
   },
   "server": {
-    "apiBaseUrl": "https:\/\/api-dot-all-of-us-workbench-test.appspot.com",
+    "apiBaseUrl": "http:\/\/localhost:8081",
+    "apiAssetsBaseUrl": "https:\/\/api-dot-all-of-us-workbench-test.appspot.com",
     "uiBaseUrl": "http:\/\/localhost:4200",
     "publicApiKeyForErrorReports": "",
     "projectId": "all-of-us-workbench-test",
