--- a/api/config/config_preprod.json
+++ b/api/config/config_preprod.json
@@ -72,6 +72,7 @@
   },
   "server": {
     "apiBaseUrl": "https:\/\/api.preprod-workbench.researchallofus.org",
+    "apiAssetsBaseUrl": "https:\/\/api.preprod-workbench.researchallofus.org",
     "uiBaseUrl": "https:\/\/preprod-workbench.researchallofus.org",
     "publicApiKeyForErrorReports": "AIzaSyA5Q0xqZdyaHUIUjZFqpim26wQFO0JqIRw",
     "projectId": "all-of-us-rw-preprod",
