--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -72,6 +72,7 @@
   },
   "server": {
     "apiBaseUrl": "https:\/\/api.workbench.researchallofus.org",
+    "apiAssetsBaseUrl": "https:\/\/api.workbench.researchallofus.org",
     "uiBaseUrl": "https:\/\/workbench.researchallofus.org",
     "publicApiKeyForErrorReports": "AIzaSyBSPcQ0FcR99GLXaqX4Ujpoj3JUDSP689g",
     "projectId": "all-of-us-rw-prod",
