[no-ticket][risk=no] Avoid parallelization on Circle (#7504)

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -250,7 +250,10 @@ spotless {
 
 test {
     useJUnitPlatform()
-    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+    // Unit testing time is cut roughly in half by running them in parallel. We avoid this on
+    // Circle because they are already split apart using a different algorithm.
+    maxParallelForks = System.getenv('CIRCLECI') == 'true' ? 1 :
+      Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
 
 // The plugin generates configuration names by concatenating SourceSet names
