--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ parameters:
     default: "circle-deploy-account@all-of-us-workbench-test.iam.gserviceaccount.com"
   workbench-image:
     type: string
-    default: "allofustest/workbench:buildimage-0.0.24"
+    default: "us.gcr.io/broad-dsp-gcr-public/workbench:buildimage-0.0.25"
   db-image:
     type: string
     default: "cimg/mysql:5.7"
