db/local-vars.env

--- a/api/db/local-vars.env
+++ b/api/db/local-vars.env
@@ -15,6 +15,7 @@ LIQUIBASE_DB_PASSWORD=lb-notasecret
 MYSQL_ROOT_PASSWORD=root-notasecret
 WORKBENCH_DB_USER=workbench
 WORKBENCH_DB_PASSWORD=wb-notasecret
+DB_PASSWORD=wb-notasecret
 DEV_READONLY_DB_USER=dev-readonly
 DEV_READONLY_DB_PASSWORD=dev-readonly-notasecret
 CDR_DB_USER=workbench
