--- a/api/src/main/webapp/WEB-INF/appengine-web.xml.template
+++ b/api/src/main/webapp/WEB-INF/appengine-web.xml.template
@@ -1,6 +1,6 @@
 <appengine-web-app xmlns="http://appengine.google.com/ns/1.0">
   <service>api</service>
-  <runtime>java8</runtime>
+  <runtime>java11</runtime>
 
   <!--
   The GAE java8 runtime restricts certain JVM APIs. The java11 runtime has fewer restrictions.
@@ -51,7 +51,7 @@
     <exclude path="static/README.md"/>
   </static-files>
 
-  <instance-class>${GAE_INSTANCE_CLASS}</instance-class>
+  <instance-class>F4</instance-class>
   <automatic-scaling>
     <min-idle-instances>${GAE_MIN_IDLE_INSTANCES}</min-idle-instances>
     <max-instances>${GAE_MAX_INSTANCES}</max-instances>
