--- a/api/build.gradle
+++ b/api/build.gradle
@@ -459,7 +459,9 @@ dependencies {
     compile "org.springframework:spring-aspects:$project.ext.SPRING_FRAMEWORK_VERSION"
     compile "org.springframework:spring-beans:$project.ext.SPRING_FRAMEWORK_VERSION"
     compile "org.springframework:spring-context:$project.ext.SPRING_FRAMEWORK_VERSION"
-    compile "org.springframework:spring-core:$project.ext.SPRING_FRAMEWORK_VERSION"
+    compile("org.springframework:spring-core:$project.ext.SPRING_FRAMEWORK_VERSION") {
+      exclude group: 'org.springframework', module: 'spring-jcl'
+    }
     compile "org.springframework:spring-expression:$project.ext.SPRING_FRAMEWORK_VERSION"
     compile "org.springframework:spring-jcl:$project.ext.SPRING_FRAMEWORK_VERSION"
     compile "org.springframework:spring-jdbc:$project.ext.SPRING_FRAMEWORK_VERSION"
@@ -854,4 +856,37 @@ compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+dependencies {
+  modules {
+    module("com.sun.activation:jakarta.activation") {
+      replacedBy("jakarta.annotation:jakarta.annotation-api")
+    }
+    module("javax.annotation:javax.annotation-api") {
+      replacedBy("jakarta.annotation:jakarta.annotation-api")
+    }
+    module("org.apache.tomcat:tomcat-annotations-api") {
+      replacedBy("jakarta.annotation:jakarta.annotation-api")
+    }
+    module("javax.persistence:javax.persistence-api") {
+      replacedBy("jakarta.persistence:jakarta.persistence-api")
+    }
+    module("org.aspectj:aspectjrt") { replacedBy("org.aspectj:aspectjweaver") }
+    module("javax.xml.bind:javax.xml.bind-api") {
+      replacedBy("jakarta.xml.bind:jakarta.xml.bind-api")
+    }
+    module("javax.xml.bind:jaxb-api") { replacedBy("jakarta.xml.bind:jakarta.xml.bind-api") }
+    module("javax.activation:javax.activation-api") {
+      replacedBy("jakarta.activation:jakarta.activation-api")
+    }
+    module("org.jboss.spec.javax.transaction:jboss-transaction-api_1.2_spec") {
+      replacedBy("jakarta.transaction:jakarta.transaction-api")
+    }
+    module("org.springframework:spring-jcl") { replacedBy("commons-logging:commons-logging") }
+    module("javax.servlet:servlet-api") { replacedBy("javax.servlet:javax.servlet-api") }
+    module("org.apache.tomcat:tomcat-juli") {
+      replacedBy("org.apache.tomcat.embed:tomcat-embed-core")
+    }
+  }
 }
