--- a/api/build.gradle
+++ b/api/build.gradle
@@ -52,10 +52,7 @@ plugins {
     id 'org.springframework.boot' version '2.3.12.RELEASE'
 }
 
-
-if (JavaVersion.current() != JavaVersion.VERSION_11) {
-    throw new GradleException("This build must be run with Java 11. See developer-system-initialization.md. The java version used ${JavaVersion.current()}")
-}
+sourceCompatibility = JavaVersion.VERSION_11
 
 // Artifact configurations derived from base configs. Configuration names
 // are concatenated by the Java plugin.
