update java version

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -54,6 +54,10 @@ plugins {
 
 sourceCompatibility = JavaVersion.VERSION_11
 
+if (JavaVersion.current() != JavaVersion.VERSION_11) {
+    throw new GradleException("This build must be run with Java 11. See developer-system-initialization.md. The java version used ${JavaVersion.current()}")
+}
+
 // Artifact configurations derived from base configs. Configuration names
 // are concatenated by the Java plugin.
 // https://docs.gradle.org/current/userguide/java_plugin.html#java_source_set_configurations
