--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -1,7 +1,7 @@
 # Image used for deployment. The Circle image is not used here as it does not
 # have an ARM build (M1 chip requires emulation).
 # Keep synchronized with ci/Dockerfile.circle_build
-FROM openjdk:11-buster
+FROM openjdk:11
 
 RUN apt-get update \
   && apt-get install --no-install-recommends -yq \
