Fix Spring-based command-line tools

--- a/api/db/local-vars.env
+++ b/api/db/local-vars.env
@@ -1,14 +1,9 @@
 # This is the vars.env file for running the local AoU API DB.
 # Cloud-SQL vars.env files are located in their projects' respective credentials buckets
 
-DB_DRIVER=com.mysql.jdbc.Driver
-# "db" hostname is established for the local docker network via docker-compose.yaml
-DB_HOST="${DB_HOST:-db}"
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=workbench
-
-DB_CONNECTION_STRING=jdbc:mysql://$DB_HOST/workbench?useSSL=false
-CDR_DB_CONNECTION_STRING=jdbc:mysql://$DB_HOST/workbench?useSSL=false
 
 LIQUIBASE_DB_USER=liquibase
 LIQUIBASE_DB_PASSWORD=lb-notasecret
@@ -26,4 +21,3 @@ WORKBENCH_ENV=local
 # GAE_*_INSTANCES variables are substituted into the API appengine-web.xml
 GAE_MIN_IDLE_INSTANCES=1
 GAE_MAX_INSTANCES=10
-GAE_INSTANCE_CLASS=F1
