disable prod access check

--- a/api/config/config_prod.json
+++ b/api/config/config_prod.json
@@ -108,7 +108,7 @@
       "lookbackPeriod": 330,
       "trainingLookbackPeriod": 30
     },
-    "enableApiUrlCheck": false:q
+    "enableApiUrlCheck": false
   },
   "featureFlags": {
     "unsafeAllowDeleteUser": false,
