Revert "WIP deprecate gceConfig in workbench-api.yaml"
This reverts commit 11583c3a3de072de3512aee9cd69fe00a656000e.

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6352,9 +6352,7 @@ definitions:
         description: The tool docker image to install. May be Dockerhub or GCR. If not
           set, a default Jupyter image will be installed.
       gceConfig:
-        description: >
-          DEPRECATED.  Creating GCE runtimes without Persistent Disks is no longer supported.
-          To be removed after there are no extant runtimes like this.
+        description: oneOf gceConfig, dataprocConfig, gceWithPdConfig will be returned
         "$ref": "#/definitions/GceConfig"
       gceWithPdConfig:
         description: oneOf gceConfig, dataprocConfig, gceWithPdConfig will be returned
@@ -6523,9 +6521,7 @@ definitions:
         type: object
         description: The labels to be placed on the cluster. Of type Map[String,String]
   GceConfig:
-    description: >
-      DEPRECATED.  Creating GCE runtimes without Persistent Disks is no longer supported.
-      To be removed after there are no extant runtimes like this.
+    description: Configuration for Google Compute Engine instances.
     properties:
       diskSize:
         type: integer
