--- a/appengine-cron-emulator/build.gradle
+++ b/appengine-cron-emulator/build.gradle
@@ -18,10 +18,10 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "$project.ext.JACKSON_VERSION"
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: "$project.ext.JACKSON_VERSION"
-    compile group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "$project.ext.JACKSON_VERSION"
+    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: "$project.ext.JACKSON_VERSION"
+    implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 jar {
@@ -32,6 +32,7 @@ jar {
     }
 
     from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+        duplicatesStrategy = 'exclude'
     }
 }
