RW-9197 Add env variables for new CDR assets

--- a/api/config/cdr_config_local.json
+++ b/api/config/cdr_config_local.json
@@ -135,18 +135,20 @@
       "hasFitbitSleepData": true,
       "hasCopeSurveyData": true,
       "hasSurveyConductData": true,
-      "storageBasePath": "5",
+      "storageBasePath": "v7",
       "wgsVcfMergedStoragePath": "wgs/vcf/merged",
       "wgsCramManifestPath": "wgs/cram/manifest.csv",
       "microarrayVcfSingleSampleStoragePath": "microarray/vcf/single_sample",
-      "wgsVdsPath": "wgs/vds",
-      "wgsExomeNonSplitHailPath": "wgs/exome/non-split-hail.mt",
-      "wgsExomeSplitHailPath": "wgs/exome/split-hail.mt",
-      "wgsExomeVcfPath": "wgs/exome/vcf",
-      "wgsCommonVariantsNonSplitHailPath": "wgs/exome/non-split-hail.mt",
-      "wgsCommonVariantsSplitHailPath": "wgs/exome/split-hail.mt",
-      "wgsCommonVariantsVcfPath": "wgs/exome/vcf",
-      "longReadsStoragePath": "longreads",
+      "wgsVdsPath": "wgs/vds/gvs_export.vds",
+      "wgsExomeMultiHailPath": "wgs/without_ext_aian_prod/vds/exome/multiMT/delta_basis_without_ext_aian_prod_gq0_3regions_exome.mt",
+      "wgsExomeVcfPath": "v7/wgs/without_ext_aian_prod/vds/exome/vcf",
+      "wgsAcafThresholdVcfPath": "wgs/without_ext_aian_prod/vds/acaf_threshold/vcf",
+      "wgsClinvarVcfPath": "wgs/without_ext_aian_prod/vds/clinvar/vcf",
+      "wgsLongReadsManifestPath": "longreads/manifest.csv",
+      "wgsLongReadsHailGRCh38": "longreads/hail.mt/GRCh38",
+      "wgsLongReadsHailT2T": "longreads/hail.mt/T2T",
+      "wgsLongReadsJointVcfGRCh38": "longreads/joint_vcf/GRCh38",
+      "wgsLongReadsJointVcfT2T": "longreads/joint_vcf/T2T",
       "accessTier": "controlled"
     },
     {
