Missed entry in build.rb

--- a/api/snippets-menu/aou-snippets-menu.js.template
+++ b/api/snippets-menu/aou-snippets-menu.js.template
@@ -17,7 +17,8 @@ define([
     const rMenus = [
       {{R_DATASET_MENU_JSON}},
       {{R_GCS_MENU_JSON}},
-      {{R_SQL_MENU_JSON}}
+      {{R_SQL_MENU_JSON}},
+      {{R_CROMWELL_JSON}}
     ];
 
     const handleKernel = (kernelName) => {
