Allow bypassing profile and publication confirmation modules

--- a/api/src/main/resources/workbench-api.yaml
+++ b/api/src/main/resources/workbench-api.yaml
@@ -6040,6 +6040,12 @@ definitions:
       twoFactorAuthBypassTime:
         type: integer
         format: int64
+      profileConfirmationBypassTime:
+        type: integer
+        format: int64
+      publicationConfirmationBypassTime:
+        type: integer
+        format: int64
       eraCommonsBypassTime:
         type: integer
         format: int64
