--- a/api/db/build.gradle
+++ b/api/db/build.gradle
@@ -8,7 +8,7 @@ repositories {
 }
 
 def db_host = System.getenv("DB_HOST") ?: "localhost"
-def db_port = System.getenv("DB_PORT") ?: "3306"
+def db_port = System.getenv("DB_PORT") ?: "3307" // We launch Cloud SQL Proxy on this port.
 def liquibase_password = System.getenv("LIQUIBASE_DB_PASSWORD") ?: "lb-notasecret"
 
 dependencies {
