--- a/api/src/main/webapp/WEB-INF/appengine-web.xml.template
+++ b/api/src/main/webapp/WEB-INF/appengine-web.xml.template
@@ -26,6 +26,8 @@
     <env-var name="GAE_PROFILER_MODE" value="cpu,heap" />
     <env-var name="CLOUD_SQL_INSTANCE_NAME" value="${CLOUD_SQL_INSTANCE_NAME}" />
     <env-var name="WORKBENCH_DB_PASSWORD" value="${WORKBENCH_DB_PASSWORD}" />
+    <env-var name="CDR_CLOUD_SQL_INSTANCE_NAME" value="${CDR_CLOUD_SQL_INSTANCE_NAME}" />
+    <env-var name="CDR_DB_PASSWORD" value="${CDR_DB_PASSWORD}" />
   </env-variables>
 
   <system-properties>
