[RW-9197][risk=no] Add Env vars for the 2023Q1 CDR release (#7577)

--- a/api/config/cdr_config_local.json
+++ b/api/config/cdr_config_local.json
@@ -135,7 +135,7 @@
       "hasFitbitSleepData": true,
       "hasCopeSurveyData": true,
       "hasSurveyConductData": true,
-      "storageBasePath": "5",
+      "storageBasePath": "v7",
       "wgsVcfMergedStoragePath": "wgs/vcf/merged",
       "wgsCramManifestPath": "wgs/cram/manifest.csv",
       "microarrayVcfSingleSampleStoragePath": "microarray/vcf/single_sample",
