adding CDR_DB_HOST=127.0.0.1

--- a/api/db/local-vars.env
+++ b/api/db/local-vars.env
@@ -2,6 +2,7 @@
 # Cloud-SQL vars.env files are located in their projects' respective credentials buckets
 
 DB_HOST=127.0.0.1
+CDR_DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_NAME=workbench
 
