enable Cromwell on Stable to match Prod

--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -121,7 +121,7 @@
     "ccSupportWhenAdminLocking": false,
     "enableUpdatedDemographicSurvey": true,
     "enableConceptSetsInCohortBuilder": false,
-    "enableCromwellGKEApp": false,
+    "enableCromwellGKEApp": true,
     "enableRStudioGKEApp": false,
     "enableDataExplorer": false
   },
