--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -33,3 +33,13 @@ spring.jpa.properties.hibernate.order_inserts=true
 # and https://precisionmedicineinitiative.atlassian.net/browse/RW-1478
 # Disable all spring-boot endpoints unless specifically necessary
 management.endpoints.enabled-by-default=false
+
+spring.output.ansi.enabled=ALWAYS
+#logging.pattern.console=%clr(${LOG_LEVEL_PATTERN:%5p}) %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
+logging.pattern.console=%clr(${LOG_LEVEL_PATTERN:%5p}) %clr(%-40.40logger{39}){cyan} %clr(:){faint}%n %m
+
+# Quiet logging for poorly-behaved libraries.
+logging.level.com.zaxxer.hikari=OFF
+logging.level.com.google.cloud.sql.core.CoreSocketFactory=WARN
+logging.level.org.springframework.data.repository.config.RepositoryConfigurationDelegate=WARN
+logging.level.org.javers.core=WARN
