--- a/api/config/config_perf.json
+++ b/api/config/config_perf.json
@@ -1,6 +1,7 @@
 {
   "firecloud": {
     "baseUrl": "https:\/\/firecloud-orchestration.dsde-perf.broadinstitute.org",
+    "rawlsBaseUrl": "https:\/\/rawls.dsde-perf.broadinstitute.org",
     "samBaseUrl": "https:\/\/sam.dsde-perf.broadinstitute.org",
     "terraUiBaseUrl": "https:\/\/bvdp-saturn-perf.appspot.com",
     "notebookRuntimeMaxAgeDays": 7,
